# GAME

./: CMakeLists.txt  notes.txt
include/: game.hpp
include/entities/: player.hpp
include/utils/: arena.hpp
src/: game.cpp  main.cpp
src/entities/: player.cpp
src/utils/: arena.cpp
